Adding pictures to html.

--- a/index.html
+++ b/index.html
@@ -461,6 +461,15 @@ if __name__ == &#34;__main__&#34;:
 </details>
 </section>
 <section>
+        <img src="Graph 1 (5 states - Fails Assertion Trace [0, 4]).png" alt="Italian Trulli">
+        <img src="Graph 1 (5 states - Fails Assertion).png" alt="Italian Trulli">
+        <img src="Graph 2 (5 states - Passes Assertion).png" alt="Italian Trulli">
+        <img src="Graph 3 (10 states - Fails Assertion Trace [1, 3]).png" alt="Italian Trulli">
+        <img src="Graph 3 (10 states - Fails Assertion).png" alt="Italian Trulli">
+        <img src="Graph 4 (10 states - Passes Assertion).png" alt="Italian Trulli">
+        <img src="Graph 5 (15 states - Fails Assertion Trace [0, 2]).png" alt="Italian Trulli">
+        <img src="Graph 5 (15 states - Fails Assertion).png" alt="Italian Trulli">
+        <img src="Graph 6 (15 states - Passes Assertion).png" alt="Italian Trulli">
 </section>
 <section>
 <h2 class="section-title" id="header-variables">Global variables</h2>
