--- a/index.html
+++ b/index.html
@@ -461,14 +461,25 @@ if __name__ == &#34;__main__&#34;:
 </details>
 </section>
 <section>
+        <p>Graph 1 (5 states - Fails Assertion Trace [0, 4])</p>
         <img src="Graph 1 (5 states - Fails Assertion Trace [0, 4]).png" alt="Italian Trulli">
+        <p>Graph 1 (5 states - Fails Assertion)</p>
         <img src="Graph 1 (5 states - Fails Assertion).png" alt="Italian Trulli">
+        <p>Graph 2 (5 states - Passes Assertion)</p>
         <img src="Graph 2 (5 states - Passes Assertion).png" alt="Italian Trulli">
+        <br>
+        <p>Graph 3 (10 states - Fails Assertion Trace [1, 3])</p>
         <img src="Graph 3 (10 states - Fails Assertion Trace [1, 3]).png" alt="Italian Trulli">
+        <p>Graph 3 (10 states - Fails Assertion)</p>
         <img src="Graph 3 (10 states - Fails Assertion).png" alt="Italian Trulli">
+        <p>Graph 4 (10 states - Passes Assertion)</p>
         <img src="Graph 4 (10 states - Passes Assertion).png" alt="Italian Trulli">
+        <br>
+        <p>Graph 5 (15 states - Fails Assertion Trace [0, 2])</p>
         <img src="Graph 5 (15 states - Fails Assertion Trace [0, 2]).png" alt="Italian Trulli">
+        <p>Graph 5 (15 states - Fails Assertion)</p>
         <img src="Graph 5 (15 states - Fails Assertion).png" alt="Italian Trulli">
+        <p>Graph 6 (15 states - Passes Assertion)</p>
         <img src="Graph 6 (15 states - Passes Assertion).png" alt="Italian Trulli">
 </section>
 <section>
